<resources>
    <string name="app_name">Jogo de Memorização</string>
    <string name="reiniciar">Reiniciar</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="color_white">white</string>

    <string name="color_neutral">#FFFFFF</string>
    <string name="color1">#FFBB86FC</string>
    <string name="color2">#4CAF50</string>
    <string name="color3">#880E4F</string>
    <string name="color4">#F4511E</string>
    <string name="color5">#F9A825</string>
    <string name="color6">#006064</string>
    <string name="win_title">Parabéns!</string>
    <string name="win_text">Você tem uma boa memória</string>
    <string name="progress_text">Progresso:</string>
    <string name="scoreText">Pontuação:</string>
    <string name="errors">Erros:</string>
    <string name="zero">0</string>
    <string name="ranking_message">Sua pontuação será guardada nos Rankings!</string>
    <string name="type_your_name">Digite seu nome</string>
    <string name="save">Continuar</string>
    <string name="access_rankings_description">Access Rankings</string>
    <string name="title_activity_ranking">Placares de Líderes</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="change_ranking_mode">Change Ranking Mode</string>
    <string name="clear_ranking">Clear ranking</string>

</resources>